modificada funcionalidade de busca

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -82,3 +82,170 @@ thead{
 	top:0;
 	position: sticky;
 }
+
+#pe{
+    position: relative;
+    left: 32.3rem;
+    bottom: 23.6rem;
+    text-decoration: none;
+}
+#sp{
+    position: relative;
+    left: 21rem;
+    bottom: 14rem;
+    text-decoration: none;
+}
+#rj{
+    position: relative;
+    left: 24rem;
+    bottom: 13rem;
+    text-decoration: none;
+}
+#ba{
+    position: relative;
+    left: 23rem;
+    bottom: 21rem;
+    text-decoration: none;
+}
+#pb{
+    position: relative;
+    left: 27rem;
+    bottom: 24.5rem;
+    text-decoration: none;
+}
+#ce{
+    position: relative;
+    left: 21.6rem;
+    bottom: 26rem;
+    text-decoration: none;
+}
+#rs{
+    position: relative;
+    left: 11rem;
+    bottom: 9rem;
+    text-decoration: none;
+}
+#rn{
+    position: relative;
+    left: 21.6rem;
+    bottom: 26.3rem;
+    text-decoration: none;
+}
+#pr{
+    position: relative;
+    left: 8.7rem;
+    bottom: 12.4rem;
+    text-decoration: none;
+}
+#ac{
+    position: relative;
+    right: 5.4rem;
+    bottom: 21rem;
+    text-decoration: none;
+}
+#rr{
+    position: relative;
+    right: 0.6rem;
+    bottom: 30.5rem;
+    text-decoration: none;
+}
+#ms{
+    position: relative;
+    left: 2.6rem;
+    bottom: 15rem;
+    text-decoration: none;
+}
+#mt{
+    position: relative;
+    left: 0.6rem;
+    bottom: 20rem;
+    text-decoration: none;
+}
+#pi{
+    position: relative;
+    left: 8.4rem;
+    bottom: 24rem;
+    text-decoration: none;
+}
+#mg{
+    position: relative;
+    left: 6rem;
+    bottom: 17rem;
+    text-decoration: none;
+}
+#go{
+    position: relative;
+    right: 0.4rem;
+    bottom: 17.5rem;
+    text-decoration: none;
+}
+#am{
+    position: relative;
+    right: 12.4rem;
+    bottom: 26rem;
+    text-decoration: none;
+}
+#es{
+    position: relative;
+    left: 4.4rem;
+    bottom: 15rem;
+    text-decoration: none;
+}
+#al{
+    position: relative;
+    left: 6.4rem;
+    bottom: 22.4rem;
+    text-decoration: none;
+}
+#ap{
+    position: relative;
+    right: 7.1rem;
+    bottom: 30rem;
+    text-decoration: none;
+}
+#ma{
+    position: relative;
+    right: 4.1rem;
+    bottom: 26rem;
+    text-decoration: none;
+}
+#pa{
+    position: relative;
+    right: 11.4rem;
+    bottom: 26rem;
+    text-decoration: none;
+}
+#ro{
+    position: relative;
+    right: 19.4rem;
+    bottom: 22rem;
+    text-decoration: none;
+}
+#sc{
+    position: relative;
+    right: 9.9rem;
+    bottom: 10rem;
+    text-decoration: none;
+}
+#se{
+    position: relative;
+    right: 3.4rem;
+    bottom: 21.2rem;
+    text-decoration: none;
+}
+#to{
+    position: relative;
+    right: 13.4rem;
+    bottom: 22rem;
+    text-decoration: none;
+}
+#df{
+    position: relative;
+    right: 15.4rem;
+    bottom: 19rem;
+    text-decoration: none;
+}
+
+
+
+
